[tool.poetry]
name = "web-scraping-rastreio"
version = "0.1.0"
description = ""
authors = ["Nicolas <nicolas_evilasio@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.49.1"
pandas = "^2.2.3"
requests = "^2.32.3"
redis = "^5.2.1"
deprecated = "^1.2.15"
aiohttp = "^3.11.10"
prefect = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
